updated readme and added min width on game grid to stop it collapsing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@ html {
   padding: 1px;
   background-image: linear-gradient(to top, rgba(255,255,0,0.75), rgba(66,179,244,0.75));
   background-size: cover;
+  min-width: 904px;
 }
 
 .row {
